fixed saved component menu overflowing beyond screen size by giving it a fixed sized and making the list scrollable.

--- a/app/css/dialog.css
+++ b/app/css/dialog.css
@@ -115,6 +115,8 @@
 
 #dialog ul {
     margin-left: 10%;
+    height: 400px;
+    overflow: auto;
 }
 
 #dialog li {
